# sql-insight-agent

./: .gitignore  README.md  pyproject.toml
app/: app.py
app/scripts/: seed_db.py
dbt_project/models/marts/: dim_customers.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_orders.sql
sql_insights_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
